@@ -236,7 +236,8 @@
         argument, there is then a length and argument data pair, where the
         length is a four-octet number in network byte order indicating the
         number of octets of data in the following argument.  Argument
-        length may be 0, but there MUST be at least one argument.</t>
+        length may be 0.  Commands with no arguments are permitted by the
+        protocol.</t>
 
         <t>Servers may impose limits on the number of arguments and the
         size of argument data to limit resource usage.  If the client
